# SysCalls

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
Docs/: API.md  ARCHITECTURE.md  CURRENT_STATE.md  DATABASE.md  DECISIONS.md  PROJECT_OVERVIEW.md  ROADMAP.md  USAGE.md
Docs/modules/: rsc_c.md  rsc_cli.md  rsc_codegen.md  rsc_collector.md  rsc_runtime.md  rsc_types.md
crates/: README.md
crates/rsc-c/: Cargo.toml  build.rs
crates/rsc-c/include/: rsc.h
crates/rsc-c/src/: lib.rs
crates/rsc-cli/: Cargo.toml
crates/rsc-cli/src/: db.rs  main.rs
crates/rsc-cli/src/commands/: diff.rs  merge.rs  mod.rs  stats.rs  verify.rs
crates/rsc-codegen/: Cargo.toml
crates/rsc-codegen/src/: lib.rs
crates/rsc-collector/: Cargo.toml
crates/rsc-collector/src/: emit.rs  error.rs  main.rs  pdb_reader.rs  pe.rs  stub_disasm.rs  symsrv.rs  version.rs
crates/rsc-runtime/: Cargo.toml  build.rs
crates/rsc-runtime/examples/: memory_alloc.rs  resolver_demo.rs
crates/rsc-runtime/src/: constants.rs  error.rs  hash.rs  jumper.rs  lib.rs  pe.rs  peb.rs  syscalls.rs  table.rs  types.rs
crates/rsc-runtime/tests/: integration.rs
crates/rsc-types/: Cargo.toml
crates/rsc-types/src/: emit.rs  lib.rs  main.rs  normalizer.rs  parser.rs
db/: canonical.toml  overrides.toml
db/auto/: .gitkeep  10_19045_6466.toml  11_26200_8246.toml
db/phnt/: .gitkeep  phnt.toml
examples/: .gitkeep
examples/c/: basic.c
examples/consumer-template/: Cargo.toml  README.md
examples/consumer-template/src/: main.rs
scripts/: README.md  build.bat  build_c_example.bat  clean.bat  merge.bat  refresh.bat  stats.bat  test.bat
tests/: .gitkeep
