[package]
name = "rsc-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RSC codegen — proc-macro for rsc_syscall! expansion"

[lib]
proc-macro = true

# Phase 2: `rsc_syscall!` macro. Build-time only — nothing from these
# crates ends up in the final user binary.
[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error2 = { workspace = true }
