[package]
name = "rsc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RSC types — phnt header parser, emits db/phnt/phnt.toml"

[[bin]]
name = "rsc-types"
path = "src/main.rs"

[lib]
name = "rsc_types"
path = "src/lib.rs"

# Phase 4: regex-based phnt parser.
[dependencies]
regex = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
